--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-    <link rel="shortcut icon" href="faveicon.png" type="image/png"/>
+    <link rel="shortcut icon" href="favicon.png" type="image/png"/>
     <meta charset="utf-8" />
     <title>AdverGames</title>
     <style> body { margin: 0; background: #333; } </style>
