--- a/space/index.html
+++ b/space/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset=utf-8>
-		<title>Gemu</title>
+		<title>Dandy Espacial</title>
 		<style>
 			body { margin: 0; }
 			canvas { width: 100%; height: 100% }
@@ -10,6 +10,7 @@
 	</head>
 	<body>
 		<div id="canvas" align="center"></div>
+		<script src="lib/howler.min.js"></script>
 		<script src="lib/three.min.js"></script>
 		<script src="js/game.js"></script>
 	</body>
