--- a/landing/index.html
+++ b/landing/index.html
@@ -12,18 +12,30 @@
 	</a>
     <img src="images/2.png" alt="" class="imagen"/>
     <img src="images/3.png" alt="" class="imagen"/>
+    <img src="images/4.png" alt="" class="imagen"/>
 
 </section>
 <section class="contenedor">
-    <img src="images/contacto.png" alt="" class="imagen"/>
-	<a href="https://marvelapp.com/1081h15g" target="_blank"><img src="images/enviar.png" alt="" class="boton"/>
-	</a>
+<br>
 
-	<form action="" method="post">
-		<input type="text" name="correo" placeholder="Tu e-mail"<br>
-		<input type="text" name="respuesta" placeholder="Tus comentario"<br>
-		<button class="enviar" type="submit">Subscribe</button>
-	</form>
+</section>
+<section class="contenedor">
+    <img src="images/form1.png" alt="" class="formA"/>
+<!-- Do not change the code! -->
+<a class="form" id="foxyform_embed_link_911129" href="http://www.foxyform.com/"></a>
+<script type="text/javascript">
+(function(d, t){
+   var g = d.createElement(t),
+       s = d.getElementsByTagName(t)[0];
+   g.src = "http://www.foxyform.com/js.php?id=911129&sec_hash=023180e060b&width=350px";
+   s.parentNode.insertBefore(g, s);
+}(document, "script"));
+</script>
+<!-- Do not change the code! -->
+
+
+
+
 
 </section>
 </body>
