--- a/landing/index.html
+++ b/landing/index.html
@@ -22,12 +22,12 @@
 <section class="contenedor">
     <img src="images/form1.png" alt="" class="formA"/>
 <!-- Do not change the code! -->
-<a class="form" id="foxyform_embed_link_911129" href="http://www.foxyform.com/"></a>
+<a class="form" id="foxyform_embed_link_911129" href="https://www.foxyform.com/"></a>
 <script type="text/javascript">
 (function(d, t){
    var g = d.createElement(t),
        s = d.getElementsByTagName(t)[0];
-   g.src = "http://www.foxyform.com/js.php?id=911129&sec_hash=023180e060b&width=350px";
+   g.src = "https://www.foxyform.com/js.php?id=911129&sec_hash=023180e060b&width=350px";
    s.parentNode.insertBefore(g, s);
 }(document, "script"));
 </script>
