--- a/landing/index.html
+++ b/landing/index.html
@@ -14,25 +14,14 @@
     <img src="images/3.png" alt="" class="imagen"/>
     <img src="images/4.png" alt="" class="imagen"/>
 
-</section>
-<section class="contenedor">
-<br>
 
 </section>
-<section class="contenedor">
-    <img src="images/form1.png" alt="" class="formA"/>
-<!-- Do not change the code! -->
-<a class="form" id="foxyform_embed_link_911129" href="https://www.foxyform.com/"></a>
-<script type="text/javascript">
-(function(d, t){
-   var g = d.createElement(t),
-       s = d.getElementsByTagName(t)[0];
-   g.src = "https://www.foxyform.com/js.php?id=911129&sec_hash=023180e060b&width=350px";
-   s.parentNode.insertBefore(g, s);
-}(document, "script"));
-</script>
-<!-- Do not change the code! -->
 
+
+<section class="contenedor">
+    <img src="images/5.png" alt="" class="imagen"/>
+	<a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2Fe%2F1FAIpQLSeqZWBQEg0An89P_s9ap-NgcUf8EqXOi0VahXE59gYoUyxlkw%2Fviewform%3Fusp%3Dsf_link&h=ATPgHOhnA9rPWSKxKt2wdy3ygvO_zGQN9O7JFb3TMl90ENVnbxq3bnWDCReNuf-xQwX4A3rIOxdzrWWk-kfsVM6oV0p-IAD0Q7JJuwaCD_vRA6F-2gFB5hZq9nhnd_OjNStn785DslIBPfN0xW_F1Ny5NLD9EA" target="_blank"><img src="images/enviar.png" alt="" class="enviar"/>
+	</a>
 
 
 
